--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -2,83 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9e766f73",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "appnope==0.1.2\r\n",
-      "argon2-cffi==20.1.0\r\n",
-      "async-generator==1.10\r\n",
-      "attrs==20.3.0\r\n",
-      "backcall==0.2.0\r\n",
-      "bleach==3.3.0\r\n",
-      "cffi==1.14.5\r\n",
-      "cycler==0.10.0\r\n",
-      "decorator==5.0.7\r\n",
-      "defusedxml==0.7.1\r\n",
-      "entrypoints==0.3\r\n",
-      "importlib-metadata==4.0.0\r\n",
-      "ipykernel==5.5.3\r\n",
-      "ipython==7.22.0\r\n",
-      "ipython-genutils==0.2.0\r\n",
-      "jedi==0.18.0\r\n",
-      "Jinja2==2.11.3\r\n",
-      "jsonschema==3.2.0\r\n",
-      "jupyter-client==6.2.0\r\n",
-      "jupyter-core==4.7.1\r\n",
-      "jupyterlab-pygments==0.1.2\r\n",
-      "kiwisolver==1.3.1\r\n",
-      "MarkupSafe==1.1.1\r\n",
-      "matplotlib==3.4.1\r\n",
-      "mistune==0.8.4\r\n",
-      "nbclient==0.5.3\r\n",
-      "nbconvert==6.0.7\r\n",
-      "nbformat==5.1.3\r\n",
-      "nest-asyncio==1.5.1\r\n",
-      "notebook==6.3.0\r\n",
-      "numpy==1.20.2\r\n",
-      "packaging==20.9\r\n",
-      "pandas==1.2.4\r\n",
-      "pandocfilters==1.4.3\r\n",
-      "parso==0.8.2\r\n",
-      "pexpect==4.8.0\r\n",
-      "pickleshare==0.7.5\r\n",
-      "Pillow==8.2.0\r\n",
-      "prometheus-client==0.10.1\r\n",
-      "prompt-toolkit==3.0.18\r\n",
-      "ptyprocess==0.7.0\r\n",
-      "pycparser==2.20\r\n",
-      "Pygments==2.8.1\r\n",
-      "pyparsing==2.4.7\r\n",
-      "pyrsistent==0.17.3\r\n",
-      "python-dateutil==2.8.1\r\n",
-      "pytz==2021.1\r\n",
-      "pyzmq==22.0.3\r\n",
-      "Send2Trash==1.5.0\r\n",
-      "six==1.15.0\r\n",
-      "terminado==0.9.4\r\n",
-      "testpath==0.4.4\r\n",
-      "tornado==6.1\r\n",
-      "traitlets==5.0.5\r\n",
-      "typing-extensions==3.7.4.3\r\n",
-      "wcwidth==0.2.5\r\n",
-      "webencodings==0.5.1\r\n",
-      "zipp==3.4.1\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 freeze"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Einlesen und erste Betrachtung des Datensatzes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6b1dc4dd",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +351,7 @@
        "[10 rows x 110 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,8 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9fed1098",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -447,8 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "18491df4",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +685,7 @@
        "[8 rows x 106 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,8 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "62ba6de4",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +814,7 @@
        " 'long_appx_lots_of_err']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,10 +825,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "05e5676e",
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Datenvorverarbeitung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Untersuchung auf fehlende Werte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -910,7 +862,7 @@
        "Length: 110, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,11 +873,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5574350",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EXT1                     0.001756\n",
+       "EXT2                     0.001756\n",
+       "EXT3                     0.001756\n",
+       "EXT4                     0.001756\n",
+       "EXT5                     0.001756\n",
+       "                           ...   \n",
+       "endelapse                0.000000\n",
+       "IPC                      0.000000\n",
+       "country                  0.000076\n",
+       "lat_appx_lots_of_err     0.000000\n",
+       "long_appx_lots_of_err    0.000000\n",
+       "Length: 110, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().mean()"
+   ]
   }
  ],
  "metadata": {
@@ -944,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
