added some of Plegers Decision Tree Steps to Erics Analysis

--- a/Part_Marco.ipynb
+++ b/Part_Marco.ipynb
@@ -460,8 +460,9 @@
     "#filter to get only US citizens and checking the length\n",
     "US = df['country'] == 'US'\n",
     "Dataset_USA = df[US]\n",
-    "Dataset_USA = Dataset_USA[Dataset_USA.columns.tolist()[:50]]\n",
-    "Dataset_USA['dateload'] = df['dateload']\n",
+    "Dataset_USA\n",
+    "#Dataset_USA = Dataset_USA[Dataset_USA.columns.tolist()[:50]]\n",
+    "#Dataset_USA['dateload'] = df['dateload']\n",
     "\n",
     "#print(len(Dataset_USA))"
    ]
@@ -767,9 +768,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Most open: Mali**\n",
+    "**Most open:**\n",
     "\n",
-    "**least open: Bonaire, Sint Eustatius und Saba**"
+    "**least open:**"
    ]
   },
   {
@@ -886,6 +887,697 @@
     "world_ax = world.drop(159).plot(figsize=(60, 10))\n",
     "gdf.plot(ax=world_ax, marker='x', color='green', markersize=1);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis political bias and regions with Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import reverse_geocoder as rg \n",
+    "\n",
+    "Dataset_USA = Dataset_USA.rename(columns = {\"lat_appx_lots_of_err\":\"lat_appx\", \"long_appx_lots_of_err\":\"long_appx\"})\n",
+    "Dataset_USA.head()\n",
+    "\n",
+    "latitudesUS = Dataset_USA['lat_appx'].tolist()\n",
+    "longitudesUS = Dataset_USA['long_appx'].tolist()\n",
+    "\n",
+    "coordinates = zip(latitudesUS,longitudesUS)\n",
+    "\n",
+    "coordinates = list(coordinates)\n",
+    "\n",
+    "coordinates "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def reverseGeocode(x):\n",
+    "    result = rg.search(x)\n",
+    "    return result\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = []\n",
+    "for state in reverseGeocode(coordinates):\n",
+    "    states.append(state['admin1'])\n",
+    "    \n",
+    "states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_USA['state'] = states\n",
+    "Dataset_USA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_longitudes = Dataset_USA['long_appx'].astype(float).abs()\n",
+    "latitudes_for_regionsplit = latitudesUS = Dataset_USA['lat_appx'].tolist()\n",
+    "\n",
+    "coordinates = zip(latitudes_for_regionsplit, positive_longitudes)\n",
+    "\n",
+    "regions = []\n",
+    "\n",
+    "for c in coordinates:\n",
+    "    if float(c[0]) < 36 and 80 < float(c[1]) < 110:\n",
+    "        regions.append('southern state')\n",
+    "    elif float(c[0]) > 40 and 80 < float(c[1]) < 120:\n",
+    "        regions.append('northern state')\n",
+    "    elif float(c[1]) > 83:\n",
+    "        regions.append('east coast')\n",
+    "    elif float(c[1]) > 117:\n",
+    "        regions.append('west coast')\n",
+    "    else:\n",
+    "        regions.append('landlocked')\n",
+    "        \n",
+    "        \n",
+    "regions\n",
+    "           \n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_USA['region'] = regions\n",
+    "Dataset_USA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "Dataset_USA['state'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'Baja California'].index, inplace=True)\n",
+    "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'New Brunswick'].index, inplace=True)\n",
+    "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'British Columbia'].index, inplace=True)\n",
+    "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'Manitoba'].index, inplace=True)\n",
+    "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'Western'].index, inplace=True)\n",
+    "Dataset_USA['state'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "democratics = ['California', 'Tennessee', 'New York', 'Maine', 'New Jersey',\n",
+    "                    'Missouri', 'Arkansas', 'Connecticut', 'Michigan', 'Minnesota', \n",
+    "                    'New Hampshire', 'Ohio', 'Colorado',\n",
+    "                    'Wisconsin', 'Nevada', 'Illinois', 'Maryland', 'Georgia', 'Washington, D.C.',\n",
+    "                    'Pennsylvania', 'Delaware', 'Hawaii', 'Kentucky', 'Louisiana', 'Oregon', \n",
+    "                    'Vermont', 'New Mexico', 'Rhode Island', 'Idaho', 'West Virginia']\n",
+    "\n",
+    "republicans = ['Florida', 'Virginia', 'Kansas', 'South Carolina', 'Texas',\n",
+    "                    'Mississippi', 'North Carolina',\n",
+    "                    'Arizona', 'Indiana', 'Oklahoma', 'South Dakota', \n",
+    "                    'Alaska', 'Utah', 'Nebraska', 'Wyoming', \n",
+    "                    'Baja California', 'North Dakota', 'Montana','Alabama']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = Dataset_USA['state']\n",
+    "political_bias = []\n",
+    "for s in states:\n",
+    "    if s in democratics:\n",
+    "        political_bias.append('blue')\n",
+    "    else:\n",
+    "        political_bias.append('red')\n",
+    "        \n",
+    "#df['Category'] = df['Count']\n",
+    "#df.loc[df['state'] > 3, 'political bias'] = 'red'\n",
+    "#df.loc[df['state'] > 3, 'political bias'] = 'blue'\n",
+    "#df.loc[df['state'] > 3, 'political bias'] = 'yellow'    \n",
+    "\n",
+    "\n",
+    "Dataset_USA['political bias'] = political_bias \n",
+    "Dataset_USA.head(10)\n",
+    "\n",
+    "\n",
+    "#not mature yet.. as you can see in the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(data= Dataset_USA, x = Dataset_USA['state'] )\n",
+    "sns.countplot(data= Dataset_USA, x = Dataset_USA['region'] )\n",
+    "sns.countplot(data= Dataset_USA, x = Dataset_USA['political bias'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(data= Dataset_USA, x = Dataset_USA['region'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,20))\n",
+    "sns.countplot(data= Dataset_USA, x = Dataset_USA['state'], order = Dataset_USA['state'].value_counts().index)\n",
+    "\n",
+    "plt.xlabel(\"states\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "US_states = pd.DataFrame(Dataset_USA['state'].value_counts())\n",
+    "states_10k = US_states[US_states['state'] >= 7000]\n",
+    "\n",
+    "plt.figure(figsize=(30,20))\n",
+    "sns.barplot(data=states_10k, x=states_10k.index, y='state')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Examine_locations = Dataset_USA[['state','region','political bias']]\n",
+    "Examine_locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x=\"region\", y=\"EXT1\", hue=\"political bias\", data=Dataset_USA, palette=\"coolwarm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x=\"political bias\", y=\"EXT1\", hue=\"region\", data=Dataset_USA, palette=\"coolwarm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for integer encoding using sklearn\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "d = defaultdict(LabelEncoder)\n",
+    "\n",
+    "# Encoding the variable\n",
+    "Dataset_USA_transformed = Dataset_USA.apply(lambda x: d[x.name].fit_transform(x))\n",
+    "\n",
+    "\n",
+    "Dataset_USA_transformed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Inverse the encoded\n",
+    "Dataset_USA_reversed = Dataset_USA_transformed.apply(lambda x: d[x.name].inverse_transform(x))\n",
+    "Dataset_USA_reversed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_USA.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_USA_predict_bias = Dataset_USA.drop(['EXT1_E',\n",
+    " 'EXT2_E',\n",
+    " 'EXT3_E',\n",
+    " 'EXT4_E',\n",
+    " 'EXT5_E',\n",
+    " 'EXT6_E',\n",
+    " 'EXT7_E',\n",
+    " 'EXT8_E',\n",
+    " 'EXT9_E',\n",
+    " 'EXT10_E',\n",
+    " 'EST1_E',\n",
+    " 'EST2_E',\n",
+    " 'EST3_E',\n",
+    " 'EST4_E',\n",
+    " 'EST5_E',\n",
+    " 'EST6_E',\n",
+    " 'EST7_E',\n",
+    " 'EST8_E',\n",
+    " 'EST9_E',\n",
+    " 'EST10_E',\n",
+    " 'AGR1_E',\n",
+    " 'AGR2_E',\n",
+    " 'AGR3_E',\n",
+    " 'AGR4_E',\n",
+    " 'AGR5_E',\n",
+    " 'AGR6_E',\n",
+    " 'AGR7_E',\n",
+    " 'AGR8_E',\n",
+    " 'AGR9_E',\n",
+    " 'AGR10_E',\n",
+    " 'CSN1_E',\n",
+    " 'CSN2_E',\n",
+    " 'CSN3_E',\n",
+    " 'CSN4_E',\n",
+    " 'CSN5_E',\n",
+    " 'CSN6_E',\n",
+    " 'CSN7_E',\n",
+    " 'CSN8_E',\n",
+    " 'CSN9_E',\n",
+    " 'CSN10_E',\n",
+    " 'OPN1_E',\n",
+    " 'OPN2_E',\n",
+    " 'OPN3_E',\n",
+    " 'OPN4_E',\n",
+    " 'OPN5_E',\n",
+    " 'OPN6_E',\n",
+    " 'OPN7_E',\n",
+    " 'OPN8_E',\n",
+    " 'OPN9_E',\n",
+    " 'OPN10_E','dateload',\n",
+    " 'screenw',\n",
+    " 'screenh',\n",
+    " 'introelapse',\n",
+    " 'testelapse',\n",
+    " 'endelapse',\n",
+    " 'IPC',\n",
+    " 'country',\n",
+    " 'lat_appx',\n",
+    " 'long_appx',\n",
+    " 'time',\n",
+    " 'daytime',\n",
+    " 'state',\n",
+    " 'region',], axis = 1)\n",
+    "\n",
+    "Dataset_USA_predict_bias.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = Dataset_USA_predict_bias.drop(columns=['political bias'])\n",
+    "y = Dataset_USA_predict_bias['political bias']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.1, random_state = 0)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "decision_tree_clf = DecisionTreeClassifier(max_depth = 6, random_state = 0)\n",
+    "decision_tree_clf.fit(X_train,y_train)\n",
+    "\n",
+    "y_prediction = decision_tree_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = decision_tree_clf.score(X_test, y_test)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the best depth of the Decision tree?\n",
+    "fen = [s.split('(')[0].strip() for s in X]\n",
+    "\n",
+    "\n",
+    "# List of values to try for max_depth:\n",
+    "max_depth_range = list(range(1, 6))\n",
+    "accuracy = []\n",
+    "print('depth, acc. Feat.imp.', fen)\n",
+    "for depth in max_depth_range:\n",
+    "    dt_clf = DecisionTreeClassifier(max_depth = depth, \n",
+    "                             random_state = 0)\n",
+    "    dt_clf.fit(X_train, y_train)    \n",
+    "    score = dt_clf.score(X_test, y_test)\n",
+    "    print(depth, score, np.round(dt_clf.feature_importances_,3))\n",
+    "    accuracy.append(score)\n",
+    "\n",
+    "print()\n",
+    "plt.xlabel('max_depth')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xticks([1,2,3,4,5])\n",
+    "plt.grid(True)\n",
+    "plt.ylim([0,1])\n",
+    "plt.plot(max_depth_range, accuracy)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# which features are the most important ones?\n",
+    "importances = pd.DataFrame({'feature':X_train.columns,'importance':np.round(decision_tree_clf.feature_importances_,3)})\n",
+    "importances = importances.sort_values('importance',ascending=False)\n",
+    "importances\n",
+    "\n",
+    "# --> OPN7 0,2 importance, most important question by far: Interpretation?\n",
+    "# 15 questions with 0,0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "\n",
+    "text_representation = tree.export_text(decision_tree_clf)\n",
+    "print(text_representation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8,8), dpi=100)\n",
+    "tree.plot_tree(decision_tree_clf, feature_names= X, class_names= 'political bias', filled=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import graphviz\n",
+    "# DOT data\n",
+    "dot_data = tree.export_graphviz(decision_tree_clf, out_file=None, \n",
+    "                                feature_names= X_train,  \n",
+    "                                class_names='political bias',\n",
+    "                                rounded=True,\n",
+    "                                filled=True)\n",
+    "\n",
+    "# Draw graph\n",
+    "graph = graphviz.Source(dot_data, format=\"png\") \n",
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "randomforest_classifier = RandomForestClassifier(n_estimators = 50, criterion = 'entropy')\n",
+    "randomforest_classifier.fit(X_train, y_train)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predict_train = randomforest_classifier.predict(X_train)\n",
+    "print(classification_report(y_train, y_predict_train))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_train, y_predict_train)\n",
+    "sns.heatmap(cm, annot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "    # Model Accuracy: how often is the classifier correct?\n",
+    "print(confusion_matrix(y_train, y_predict_train))   \n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_train, y_predict_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predict_test = randomforest_classifier.predict(X_test)\n",
+    "print(classification_report(y_test, y_predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_test, y_predict_test)\n",
+    "sns.heatmap(cm, annot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "    # Model Accuracy: how often is the classifier correct?\n",
+    "print(confusion_matrix(y_test, y_predict_test))   \n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import corrcoef\n",
+    "    \n",
+    "    #boston.CRIM.to_numpy()    # As a NumPy array\n",
+    "corrcoef(Dataset_USA_transformed.EXT1.to_numpy(), Dataset_USA_transformed['political bias'].to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import corrcoef\n",
+    "    \n",
+    "    #boston.CRIM.to_numpy()    # As a NumPy array\n",
+    "corrcoef(Dataset_USA_transformed.EXT1.to_numpy(), Dataset_USA_transformed.region.to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import corrcoef\n",
+    "    \n",
+    "    #boston.CRIM.to_numpy()    # As a NumPy array\n",
+    "corrcoef(Dataset_USA_transformed.region.to_numpy(), Dataset_USA_transformed['political bias'].to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
