pointed out heavy questions to analysewith Eric tommorow, grouped questions for Decision Tree increase and tried to run the cell to find out the high/low of all representive countries

--- a/Part_Marco.ipynb
+++ b/Part_Marco.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "#loading data\n",
     "data = pd.read_csv(\"data-final.csv\", sep=\"\\t\")\n",
-    "data.head(10)"
+    "data.head(2)"
    ]
   },
   {
@@ -335,7 +335,7 @@
     "le.fit(df_model['Country_cat'])\n",
     "df_model.loc[:, 'Country_num'] = le.transform(df_model['Country_cat'])\n",
     "\n",
-    "df_model.head(10)"
+    "df_model.head(2)"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cluster 0 sehr introvertiert (wenig extrovertiert) und neurotisch --> leichte negative Korrelation\n",
+    "Cluster 0 und 2 sehr introvertiert (wenig extrovertiert) und neurotisch --> leichte negative Korrelation\n",
     "\n",
     "Wirkliche Basistypen nicht rauszufiltern, recht ähnlich bei Open - auch sonst alles innerhalb von 1.0 Abweichung nur"
    ]
@@ -531,41 +531,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#looking up the dataset for the morning category\n",
-    "Dataset_USA[morning]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#looking up the mean values of morning category\n",
-    "Dataset_USA[morning].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#store the mean value of every daytime category in a list\n",
-    "mean_list_morning = list(Dataset_USA[morning].mean())\n",
-    "mean_list_noon = list(Dataset_USA[noon].mean())\n",
-    "mean_list_evening = list(Dataset_USA[evening].mean())\n",
-    "mean_list_night = list(Dataset_USA[night].mean())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -613,15 +578,22 @@
    },
    "outputs": [],
    "source": [
+    "# checking in which countries more than 1000 residents participated\n",
     "count_countries = pd.DataFrame(df['country'].value_counts())\n",
     "representive_countries = count_countries[count_countries['country'] >= 1000]\n",
-    "representive_countries"
+    "representive_countries\n",
+    "\n",
+    "#creating alist with all the representive countries\n",
+    "all_representive_countries = ['US', 'GB', 'CA', 'AU', 'PH', 'IN', 'DE', 'NZ', 'MY', 'MX', 'NO', 'SE', 'NL', 'SG', 'ID', 'BR', 'FR', 'DK', 'IE', 'IT', 'ES', 'PL', 'FI', 'RO', 'BE', 'ZA', 'HK', 'CO', 'PK', 'RU', 'AR', 'CH', 'AE', 'TR', 'PT', 'GR', 'VN', 'HR', 'AT', 'CL', 'RS', 'CZ', 'TH', 'JP', 'PE', 'KR', 'HU', 'IL', 'KE', 'CN', 'BG', 'VE', 'EC', 'LT', 'SA', 'EG', 'EE']\n",
+    "all_representive_countries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# creating a newdata frame to reduce the dimensions and compare the statements of the countrys\n",
@@ -638,7 +610,8 @@
     "df_sums_world['agreeable'] = df[agr].sum(axis=1)/10\n",
     "df_sums_world['conscientious'] = df[csn].sum(axis=1)/10\n",
     "df_sums_world['open'] = df[opn].sum(axis=1)/10\n",
-    "df_sums_world['country'] = df['country']"
+    "df_sums_world['country'] = df['country']\n",
+    "df_sums_world"
    ]
   },
   {
@@ -647,14 +620,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dropping all rows from df_sums_world that have les than 1000 participants --> takes very long!!\n",
-    "for country in df_sums_world['country']:\n",
-    "    if country in representive_countries:\n",
+    "print(type(list(df_sums_world['country'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dropping all rows from df_sums_world that have less than 1000 participants --> takes very long!!\n",
+    "for country in list(df_sums_world['country']):\n",
+    "    if country in all_representive_countries:\n",
     "        pass\n",
     "    else:\n",
     "        df_sums_world = df_sums_world.drop(df_sums_world[(df_sums_world.country == country)].index)\n",
-    "\n",
-    "df_sums_world"
+    "        \n",
+    "df_sums_world #hier erstmal abgebrochen zum pushen"
    ]
   },
   {
@@ -1019,7 +1001,7 @@
     "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'British Columbia'].index, inplace=True)\n",
     "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'Manitoba'].index, inplace=True)\n",
     "Dataset_USA.drop(Dataset_USA.loc[Dataset_USA['state']== 'Western'].index, inplace=True)\n",
-    "Dataset_USA['state'].unique()"
+    "#Dataset_USA['state'].unique()"
    ]
   },
   {
@@ -1206,7 +1188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dataset_USA_predict_bias = Dataset_USA.drop(['EXT1_E',\n",
+    "Dataset_USA_predict_bias = Dataset_USA.drop(['EXT1_E', #maybe hier groupen bevor man Decision Tree anwendet\n",
     " 'EXT2_E',\n",
     " 'EXT3_E',\n",
     " 'EXT4_E',\n",
@@ -1563,14 +1545,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating df which is reduced to the eight most special questions\n",
+    "heavy_questions = ['EXT1', 'EST8', 'AGR1', 'AGR3', 'AGR7', 'CSN5', 'CSN8', 'OPN8', 'political bias']\n",
+    "reduced_questions_df_USA = Dataset_USA_predict_bias[heavy_questions]\n",
+    "reduced_questions_df_USA.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# looking at the means of every answer grouped by the target political bias\n",
+    "reduced_questions_df_USA.groupby('political bias').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train_test-split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = reduced_questions_df_USA.drop(columns=['political bias'])\n",
+    "y = reduced_questions_df_USA['political bias']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state = 0)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# decision tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "decision_tree_clf = DecisionTreeClassifier(max_depth = 6, random_state = 0)\n",
+    "decision_tree_clf.fit(X_train,y_train)\n",
+    "\n",
+    "y_prediction = decision_tree_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#evaluation\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = decision_tree_clf.score(y_prediction, y_test)\n",
+    "print(score)"
+   ]
   },
   {
    "cell_type": "code",
