compared the difference between the positive and negative answers --> result is maybe interesting for the psychological background

--- a/Part_Marco.ipynb
+++ b/Part_Marco.ipynb
@@ -1619,11 +1619,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison negative vs. positive questions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creating a negative df\n",
+    "negative_data = Dataset_USA[negative_questions]\n",
+    "negative_data['daytime'] = Dataset_USA['daytime']\n",
+    "negative_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a positive df\n",
+    "positive_data = Dataset_USA[positiv_questions]\n",
+    "positive_data['daytime'] = Dataset_USA['daytime']\n",
+    "positive_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grouping by the daytime\n",
+    "negative_data.groupby('daytime').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grouping by the daytime\n",
+    "positive_data.groupby('daytime').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean of all answers a participant gave (negatives)\n",
+    "negative_combined = pd.DataFrame()\n",
+    "negative_combined['all_negatives_combined'] = Dataset_USA[negative_questions].sum(axis = 1)/ 18\n",
+    "negative_combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean of all answers a participant gave (negatives)\n",
+    "positive_combined = pd.DataFrame()\n",
+    "positive_combined['all_positives_combined'] = Dataset_USA[positiv_questions].sum(axis = 1)/ 32\n",
+    "positive_combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculating the differences between the means\n",
+    "\n",
+    "pos_neg_diff = []\n",
+    "counter = 0\n",
+    "\n",
+    "for positive_value in positive_combined['all_positives_combined']:\n",
+    "        difference = positive_value - list(negative_combined['all_negatives_combined'])[counter]\n",
+    "        pos_neg_diff.append(difference)\n",
+    "        counter = counter + 1\n",
+    "\n",
+    "print(pos_neg_diff[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(pos_neg_diff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looking if the mean of the list pos_neg_diff ist positive/negative/0\n",
+    "print(pos_neg_diff.mean())"
+   ]
   },
   {
    "cell_type": "code",
