--- a/Final_NB.ipynb
+++ b/Final_NB.ipynb
@@ -3561,7 +3561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "c04de5c7",
    "metadata": {},
    "outputs": [
@@ -3597,6 +3597,7 @@
        "      <th>EXT9</th>\n",
        "      <th>EXT10</th>\n",
        "      <th>...</th>\n",
+       "      <th>dateload</th>\n",
        "      <th>screenw</th>\n",
        "      <th>screenh</th>\n",
        "      <th>introelapse</th>\n",
@@ -3606,7 +3607,6 @@
        "      <th>country</th>\n",
        "      <th>lat_appx</th>\n",
        "      <th>long_appx</th>\n",
-       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3623,6 +3623,7 @@
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>2016-03-03 02:05:00</td>\n",
        "      <td>360.0</td>\n",
        "      <td>640.0</td>\n",
        "      <td>36.0</td>\n",
@@ -3632,7 +3633,6 @@
        "      <td>US</td>\n",
        "      <td>30.3322</td>\n",
        "      <td>-81.6556</td>\n",
-       "      <td>POINT (-81.65560 30.33220)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -3647,6 +3647,7 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>2016-03-03 02:22:02</td>\n",
        "      <td>1366.0</td>\n",
        "      <td>768.0</td>\n",
        "      <td>8.0</td>\n",
@@ -3656,30 +3657,29 @@
        "      <td>US</td>\n",
        "      <td>34.1073</td>\n",
        "      <td>-118.3719</td>\n",
-       "      <td>POINT (-118.37190 34.10730)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 111 columns</p>\n",
+       "<p>2 rows × 110 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    EXT1  EXT2  EXT3  EXT4  EXT5  EXT6  EXT7  EXT8  EXT9  EXT10  ...  screenw  \\\n",
-       "6    4.0   3.0   4.0   3.0   3.0   3.0   5.0   3.0   4.0    3.0  ...    360.0   \n",
-       "21   3.0   4.0   2.0   2.0   4.0   2.0   5.0   3.0   1.0    3.0  ...   1366.0   \n",
+       "    EXT1  EXT2  EXT3  EXT4  EXT5  EXT6  EXT7  EXT8  EXT9  EXT10  ...  \\\n",
+       "6    4.0   3.0   4.0   3.0   3.0   3.0   5.0   3.0   4.0    3.0  ...   \n",
+       "21   3.0   4.0   2.0   2.0   4.0   2.0   5.0   3.0   1.0    3.0  ...   \n",
        "\n",
-       "    screenh  introelapse  testelapse  endelapse  IPC  country  lat_appx  \\\n",
-       "6     640.0         36.0       179.0         10    1       US   30.3322   \n",
-       "21    768.0          8.0       305.0         17    1       US   34.1073   \n",
+       "               dateload  screenw  screenh  introelapse  testelapse  endelapse  \\\n",
+       "6   2016-03-03 02:05:00    360.0    640.0         36.0       179.0         10   \n",
+       "21  2016-03-03 02:22:02   1366.0    768.0          8.0       305.0         17   \n",
        "\n",
-       "    long_appx                     geometry  \n",
-       "6    -81.6556   POINT (-81.65560 30.33220)  \n",
-       "21  -118.3719  POINT (-118.37190 34.10730)  \n",
+       "    IPC  country  lat_appx  long_appx  \n",
+       "6     1       US   30.3322   -81.6556  \n",
+       "21    1       US   34.1073  -118.3719  \n",
        "\n",
-       "[2 rows x 111 columns]"
+       "[2 rows x 110 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3693,7 +3693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "4cae666e",
    "metadata": {},
    "outputs": [
@@ -3741,6 +3741,7 @@
        "      <th>EXT9</th>\n",
        "      <th>EXT10</th>\n",
        "      <th>...</th>\n",
+       "      <th>screenw</th>\n",
        "      <th>screenh</th>\n",
        "      <th>introelapse</th>\n",
        "      <th>testelapse</th>\n",
@@ -3749,7 +3750,6 @@
        "      <th>country</th>\n",
        "      <th>lat_appx</th>\n",
        "      <th>long_appx</th>\n",
-       "      <th>geometry</th>\n",
        "      <th>time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3767,6 +3767,7 @@
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>360.0</td>\n",
        "      <td>640.0</td>\n",
        "      <td>36.0</td>\n",
        "      <td>179.0</td>\n",
@@ -3775,7 +3776,6 @@
        "      <td>US</td>\n",
        "      <td>30.3322</td>\n",
        "      <td>-81.6556</td>\n",
-       "      <td>POINT (-81.65560 30.33220)</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3791,6 +3791,7 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1366.0</td>\n",
        "      <td>768.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>305.0</td>\n",
@@ -3799,7 +3800,6 @@
        "      <td>US</td>\n",
        "      <td>34.1073</td>\n",
        "      <td>-118.3719</td>\n",
-       "      <td>POINT (-118.37190 34.10730)</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3815,6 +3815,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1366.0</td>\n",
        "      <td>768.0</td>\n",
        "      <td>24.0</td>\n",
        "      <td>179.0</td>\n",
@@ -3823,7 +3824,6 @@
        "      <td>US</td>\n",
        "      <td>36.2082</td>\n",
        "      <td>-86.879</td>\n",
-       "      <td>POINT (-86.87900 36.20820)</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3839,6 +3839,7 @@
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1366.0</td>\n",
        "      <td>768.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>265.0</td>\n",
@@ -3847,7 +3848,6 @@
        "      <td>US</td>\n",
        "      <td>37.2965</td>\n",
        "      <td>-79.9878</td>\n",
-       "      <td>POINT (-79.98780 37.29650)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3863,6 +3863,7 @@
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>768.0</td>\n",
        "      <td>1024.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>176.0</td>\n",
@@ -3871,12 +3872,11 @@
        "      <td>US</td>\n",
        "      <td>38.0</td>\n",
        "      <td>-97.0</td>\n",
-       "      <td>POINT (-97.00000 38.00000)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 112 columns</p>\n",
+       "<p>5 rows × 111 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3887,24 +3887,24 @@
        "71    3.0   2.0   1.0   2.0   3.0   4.0   2.0   2.0   3.0    1.0  ...   \n",
        "100   3.0   4.0   5.0   3.0   4.0   4.0   4.0   3.0   3.0    3.0  ...   \n",
        "\n",
-       "     screenh  introelapse  testelapse  endelapse  IPC  country  lat_appx  \\\n",
-       "6      640.0         36.0       179.0         10    1       US   30.3322   \n",
-       "21     768.0          8.0       305.0         17    1       US   34.1073   \n",
-       "51     768.0         24.0       179.0         14    1       US   36.2082   \n",
-       "71     768.0         15.0       265.0         16    1       US   37.2965   \n",
-       "100   1024.0         13.0       176.0         12    1       US      38.0   \n",
+       "     screenw  screenh  introelapse  testelapse  endelapse  IPC  country  \\\n",
+       "6      360.0    640.0         36.0       179.0         10    1       US   \n",
+       "21    1366.0    768.0          8.0       305.0         17    1       US   \n",
+       "51    1366.0    768.0         24.0       179.0         14    1       US   \n",
+       "71    1366.0    768.0         15.0       265.0         16    1       US   \n",
+       "100    768.0   1024.0         13.0       176.0         12    1       US   \n",
        "\n",
-       "     long_appx                     geometry  time  \n",
-       "6     -81.6556   POINT (-81.65560 30.33220)     2  \n",
-       "21   -118.3719  POINT (-118.37190 34.10730)     2  \n",
-       "51     -86.879   POINT (-86.87900 36.20820)     2  \n",
-       "71    -79.9878   POINT (-79.98780 37.29650)     3  \n",
-       "100      -97.0   POINT (-97.00000 38.00000)     3  \n",
+       "     lat_appx  long_appx  time  \n",
+       "6     30.3322   -81.6556     2  \n",
+       "21    34.1073  -118.3719     2  \n",
+       "51    36.2082    -86.879     2  \n",
+       "71    37.2965   -79.9878     3  \n",
+       "100      38.0      -97.0     3  \n",
        "\n",
-       "[5 rows x 112 columns]"
+       "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "3f0d3d40",
    "metadata": {},
    "outputs": [
@@ -3928,7 +3928,7 @@
        "['morning', 'noon', 'evening', 'night']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3942,7 +3942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "65fe3030",
    "metadata": {},
    "outputs": [
@@ -3952,7 +3952,7 @@
        "[0, 6, 12, 18, 24]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3964,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "688b78d6",
    "metadata": {},
    "outputs": [
@@ -4012,6 +4012,7 @@
        "      <th>EXT9</th>\n",
        "      <th>EXT10</th>\n",
        "      <th>...</th>\n",
+       "      <th>screenh</th>\n",
        "      <th>introelapse</th>\n",
        "      <th>testelapse</th>\n",
        "      <th>endelapse</th>\n",
@@ -4019,7 +4020,6 @@
        "      <th>country</th>\n",
        "      <th>lat_appx</th>\n",
        "      <th>long_appx</th>\n",
-       "      <th>geometry</th>\n",
        "      <th>time</th>\n",
        "      <th>daytime</th>\n",
        "    </tr>\n",
@@ -4038,6 +4038,7 @@
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>640.0</td>\n",
        "      <td>36.0</td>\n",
        "      <td>179.0</td>\n",
        "      <td>10</td>\n",
@@ -4045,7 +4046,6 @@
        "      <td>US</td>\n",
        "      <td>30.3322</td>\n",
        "      <td>-81.6556</td>\n",
-       "      <td>POINT (-81.65560 30.33220)</td>\n",
        "      <td>2</td>\n",
        "      <td>morning</td>\n",
        "    </tr>\n",
@@ -4062,6 +4062,7 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>768.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>305.0</td>\n",
        "      <td>17</td>\n",
@@ -4069,7 +4070,6 @@
        "      <td>US</td>\n",
        "      <td>34.1073</td>\n",
        "      <td>-118.3719</td>\n",
-       "      <td>POINT (-118.37190 34.10730)</td>\n",
        "      <td>2</td>\n",
        "      <td>morning</td>\n",
        "    </tr>\n",
@@ -4086,6 +4086,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>768.0</td>\n",
        "      <td>24.0</td>\n",
        "      <td>179.0</td>\n",
        "      <td>14</td>\n",
@@ -4093,7 +4094,6 @@
        "      <td>US</td>\n",
        "      <td>36.2082</td>\n",
        "      <td>-86.879</td>\n",
-       "      <td>POINT (-86.87900 36.20820)</td>\n",
        "      <td>2</td>\n",
        "      <td>morning</td>\n",
        "    </tr>\n",
@@ -4110,6 +4110,7 @@
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>768.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>265.0</td>\n",
        "      <td>16</td>\n",
@@ -4117,7 +4118,6 @@
        "      <td>US</td>\n",
        "      <td>37.2965</td>\n",
        "      <td>-79.9878</td>\n",
-       "      <td>POINT (-79.98780 37.29650)</td>\n",
        "      <td>3</td>\n",
        "      <td>morning</td>\n",
        "    </tr>\n",
@@ -4134,6 +4134,7 @@
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1024.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>176.0</td>\n",
        "      <td>12</td>\n",
@@ -4141,13 +4142,12 @@
        "      <td>US</td>\n",
        "      <td>38.0</td>\n",
        "      <td>-97.0</td>\n",
-       "      <td>POINT (-97.00000 38.00000)</td>\n",
        "      <td>3</td>\n",
        "      <td>morning</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 113 columns</p>\n",
+       "<p>5 rows × 112 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4158,24 +4158,24 @@
        "71    3.0   2.0   1.0   2.0   3.0   4.0   2.0   2.0   3.0    1.0  ...   \n",
        "100   3.0   4.0   5.0   3.0   4.0   4.0   4.0   3.0   3.0    3.0  ...   \n",
        "\n",
-       "     introelapse  testelapse  endelapse  IPC  country  lat_appx  long_appx  \\\n",
-       "6           36.0       179.0         10    1       US   30.3322   -81.6556   \n",
-       "21           8.0       305.0         17    1       US   34.1073  -118.3719   \n",
-       "51          24.0       179.0         14    1       US   36.2082    -86.879   \n",
-       "71          15.0       265.0         16    1       US   37.2965   -79.9878   \n",
-       "100         13.0       176.0         12    1       US      38.0      -97.0   \n",
+       "     screenh  introelapse  testelapse  endelapse  IPC  country  lat_appx  \\\n",
+       "6      640.0         36.0       179.0         10    1       US   30.3322   \n",
+       "21     768.0          8.0       305.0         17    1       US   34.1073   \n",
+       "51     768.0         24.0       179.0         14    1       US   36.2082   \n",
+       "71     768.0         15.0       265.0         16    1       US   37.2965   \n",
+       "100   1024.0         13.0       176.0         12    1       US      38.0   \n",
        "\n",
-       "                        geometry  time  daytime  \n",
-       "6     POINT (-81.65560 30.33220)     2  morning  \n",
-       "21   POINT (-118.37190 34.10730)     2  morning  \n",
-       "51    POINT (-86.87900 36.20820)     2  morning  \n",
-       "71    POINT (-79.98780 37.29650)     3  morning  \n",
-       "100   POINT (-97.00000 38.00000)     3  morning  \n",
+       "     long_appx  time  daytime  \n",
+       "6     -81.6556     2  morning  \n",
+       "21   -118.3719     2  morning  \n",
+       "51     -86.879     2  morning  \n",
+       "71    -79.9878     3  morning  \n",
+       "100      -97.0     3  morning  \n",
        "\n",
-       "[5 rows x 113 columns]"
+       "[5 rows x 112 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4186,6 +4186,122 @@
     "                                    labels=daytime_categories,\n",
     "                                    include_lowest=True)\n",
     "Dataset_USA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1675d3c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>extroversion</th>\n",
+       "      <th>neurotic</th>\n",
+       "      <th>agreeable</th>\n",
+       "      <th>conscientious</th>\n",
+       "      <th>open</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>daytime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>morning</th>\n",
+       "      <td>2.962203</td>\n",
+       "      <td>3.046351</td>\n",
+       "      <td>3.771819</td>\n",
+       "      <td>3.350247</td>\n",
+       "      <td>3.878174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>noon</th>\n",
+       "      <td>3.042272</td>\n",
+       "      <td>3.016163</td>\n",
+       "      <td>3.836100</td>\n",
+       "      <td>3.433713</td>\n",
+       "      <td>3.846230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>evening</th>\n",
+       "      <td>2.968883</td>\n",
+       "      <td>3.012550</td>\n",
+       "      <td>3.832047</td>\n",
+       "      <td>3.437154</td>\n",
+       "      <td>3.904138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>night</th>\n",
+       "      <td>2.911523</td>\n",
+       "      <td>3.077329</td>\n",
+       "      <td>3.795693</td>\n",
+       "      <td>3.331708</td>\n",
+       "      <td>3.934900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         extroversion  neurotic  agreeable  conscientious      open\n",
+       "daytime                                                            \n",
+       "morning      2.962203  3.046351   3.771819       3.350247  3.878174\n",
+       "noon         3.042272  3.016163   3.836100       3.433713  3.846230\n",
+       "evening      2.968883  3.012550   3.832047       3.437154  3.904138\n",
+       "night        2.911523  3.077329   3.795693       3.331708  3.934900"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a new USA data frame to reduce the dimensions and compare the answers in relation to the daytime\n",
+    "col_list = list(Dataset_USA)\n",
+    "ext = col_list[0:10]\n",
+    "est = col_list[10:20]\n",
+    "agr = col_list[20:30]\n",
+    "csn = col_list[30:40]\n",
+    "opn = col_list[40:50]\n",
+    "\n",
+    "\n",
+    "df_sums_daytime = pd.DataFrame()\n",
+    "df_sums_daytime['extroversion'] = Dataset_USA[ext].sum(axis=1)/10\n",
+    "df_sums_daytime['neurotic'] = Dataset_USA[est].sum(axis=1)/10\n",
+    "df_sums_daytime['agreeable'] = Dataset_USA[agr].sum(axis=1)/10\n",
+    "df_sums_daytime['conscientious'] = Dataset_USA[csn].sum(axis=1)/10\n",
+    "df_sums_daytime['open'] = Dataset_USA[opn].sum(axis=1)/10\n",
+    "df_sums_daytime['daytime'] = Dataset_USA['daytime']\n",
+    "\n",
+    "\n",
+    "# displaying the mean for every catagory in each cluster\n",
+    "df_sums_daytime.groupby('daytime').mean()"
    ]
   },
   {
